// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App full app 1`] = `
<div
  className="App"
>
  <div
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="file-stub"
    />
    <h2>
      Welcome to React
    </h2>
  </div>
  <p
    className="App-intro"
  >
    To get started, edit 
    <code>
      src/App.js
    </code>
     and save to reload.
  </p>
</div>
`;

exports[`Storyshots Button with knobs 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#ffff00",
      "border": "3px solid #ff00ff",
      "padding": "10px",
    }
  }
>
  <p>
    My name is Storyteller, I'm 70 years old, and my favorite fruit is apple.
  </p>
  <p>
    My birthday is: 
    2017-1-20
  </p>
  <p>
    My wallet contains: $
    12.50
  </p>
  <p>
    In my backpack, I have:
  </p>
  <ul>
    <li>
      Laptop
    </li>
    <li>
      Book
    </li>
    <li>
      Whiskey
    </li>
  </ul>
  <p>
    Nice to meet you!
  </p>
</div>
`;

exports[`Storyshots Button with notes 1`] = `
<button
  className="css-1yjiefr"
>
  Check my notes in the notes panel
</button>
`;

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots Button with some info 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <button
      className="css-1yjiefr"
    >
      click the "?" in top right for info
    </button>
  </div>
  <a
    onClick={[Function]}
    role="button"
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }
    tabIndex="0"
  >
    Show Info
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <a
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }
      tabIndex="0"
    >
      ×
    </a>
    <div
      style={undefined}
    >
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "
              -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
              \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginTop": "50px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Button
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            with some info
          </h2>
        </div>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
                  \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
                ",
                "fontSize": "15px",
              }
            }
          >
            Use the 
            <a
              href="https://github.com/storybooks/storybook/tree/master/addons/info"
              rel="noopener noreferrer"
              style={
                Object {
                  "color": "#3498db",
                }
              }
              target="_blank"
            >
              info addon
            </a>
             with its painful API.
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  Button
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &gt;
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  click the "?" in top right for info
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;/
                  Button
                  &gt;
                </span>
              </div>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              Button
              " Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }
            >
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                  <th>
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    children
                  </td>
                  <td>
                    node
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                  <td />
                </tr>
                <tr>
                  <td>
                    onClick
                  </td>
                  <td>
                    func
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                  <td />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button with text 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots Centered Button with text 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "justifyContent": "center",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
      }
    }
  >
    <button
      className="css-1yjiefr"
      onClick={[Function]}
    >
      Hello Button
    </button>
  </div>
</div>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<article
  className="css-1fqbdip"
>
  <h1
    className="css-nil"
  >
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the
     
    <code
      className="css-mteq83"
    >
      src/stories
    </code>
     
    directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample
     
    <a
      className="css-ca0824"
      onClick={[Function]}
      role="button"
      tabIndex="0"
    >
      stories
    </a>
     
    for a component called
     
    <code
      className="css-mteq83"
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      className="css-mteq83"
    >
      Button
    </code>
     stories located at 
    <code
      className="css-mteq83"
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      className="css-ca0824"
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    className="css-bwdon3"
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the
     
    <code
      className="css-mteq83"
    >
      .storybook/webpack.config.js
    </code>
     
    to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;

exports[`Storyshots WithEvents Logger 1`] = `
<div
  style={
    Object {
      "color": "rgb(51, 51, 51)",
      "fontFamily": "
          -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
          \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
        ",
      "padding": 20,
    }
  }
>
  <h1>
    Logger
  </h1>
  <dl />
</div>
`;
